# dept-checker

./: README.md  pyproject.toml
src/debt_checker/: __init__.py  analyzers.py  cli.py  models.py  reporter.py  scorer.py
