[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debt-checker"
version = "0.1.0"
description = "Python技術的負債検出・可視化CLIツール"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
debt-checker = "debt_checker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/debt_checker"]
